--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-<name>tuneri</name>
+<name>tuneri2</name>
 <version>1.0.0</version>
 <stability>stable</stability>
 <licence>GNU General Public License (GPL)</licence>
@@ -23,6 +23,9 @@
         <dir>
             <dir name="errors">
                 <file name="tuner.php" hash="a55dfe2c81f9c848133c5614432988c2"/>
+            </dir>
+            <dir name="shell">
+                <file name="shell.php" hash="535a45a4b0c42d7a85197a811babc6ea"/>
             </dir>
         </dir>
     </target>
